--- a/css.css
+++ b/css.css
@@ -162,3 +162,9 @@ i {
   border-radius: 15px;
   border-color: #28348b;
 }
+
+footer {
+  width: 100%;
+  height: 500px;
+  background-color: #28348b;
+}
